--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
 		"express-handlebars": "^6.0.6",
 		"express-session": "^1.17.1",
 		"mysql2": "^2.2.5",
-		"sequelize": "^6.3.5"
+		"sequelize": "^6.3.5",
+		"@cubejs-client/core": "^0.31.0",
+    	"chart.js": "^4.0.0"
+	},
+	"devDependencies": {
+		"parcel": "^2.6.2"
 	}
+	
 }
