--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "workouts_db",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js",
-		"seed": "node seeds/seed.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"bcrypt": "^5.0.0",
-		"connect-session-sequelize": "^7.0.4",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"express-handlebars": "^6.0.6",
-		"express-session": "^1.17.1",
-		"mysql2": "^2.2.5",
-		"sequelize": "^6.3.5",
-		"@cubejs-client/core": "^0.31.0",
-    	"chart.js": "^4.0.0"
-	},
-	"devDependencies": {
-		"parcel": "^2.6.2"
-	}
-	
+  "name": "workouts_db",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "seed": "node seeds/seed.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@cubejs-client/core": "^0.31.0",
+    "bcrypt": "^5.0.0",
+    "chart.js": "^4.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "parcel": "^2.6.2"
+  }
 }
